--- a/hw1q1/hw1q1.cbp
+++ b/hw1q1/hw1q1.cbp
@@ -12,13 +12,15 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-Wall" />
-					<Add option="-Werror" />
-					<Add option="-pedantic" />
-					<Add option="-ansi" />
-					<Add option="-W" />
 					<Add option="-O" />
+					<Add option="-pedantic" />
+					<Add option="-Wall" />
+					<Add option="-std=c99" />
+					<Add option="-ansi" />
 					<Add option="-g" />
+					<Add option="-Werror" />
+					<Add option="-W" />
+					<Add option="-std=c99" />
 				</Compiler>
 			</Target>
 		</Build>
